finished snack or booze'

--- a/snack-or-booze/package.json
+++ b/snack-or-booze/package.json
@@ -45,5 +45,26 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "babel": {
+    "presets": [
+      "@babel/preset-env",
+      "@babel/preset-react"
+    ],
+    "plugins": [
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ]
+    ]
+  },
+ 
+  "jest": {
+    "moduleNameMapper": { "\\.(css|less)$": "<rootDir>/__mocks__/styleMock.js" }
+  },
+  "devDependencies": {
+    "jest-css-modules-transform": "^4.4.2"
+  }
 }
